@@ -619,13 +619,13 @@ admin.site.register(HotProduct, HotProductAdmin)
 
 class SaleProductManageDetailInline(admin.TabularInline):
     model = SaleProductManageDetail
-    fields = ('sale_product_id', 'name', 'pic_path', 'sale_category',
+    fields = ('sale_product_id', 'design_take_over', 'design_person', 'name', 'sale_category',
               'product_link', 'material_status', 'today_use_status')
     extra = 3
     def get_readonly_fields(self, request, obj=None):
         if not request.user.is_superuser:
             return self.readonly_fields + (
-                'sale_product_id', 'name', 'pic_path', 'sale_category', 'product_link', 'material_status',
+                'sale_product_id', 'name', 'design_person', 'design_take_over', 'pic_path', 'sale_category', 'product_link', 'material_status',
                 'today_use_status')
         return self.readonly_fields
 
