@@ -288,6 +288,8 @@ class SaleProductManageDetail(models.Model):
     NORMAL = u'normal'
     DELETE = u'delete'
     use = u'working'
+    TAKEOVER = u'takeover'
+    NOTTAKEOVER = u'nottakeover'
     MATERIAL_STATUS = (
         (COMPLETE, u'全部完成'),
         (WORKING, u'进行中')
@@ -295,6 +297,10 @@ class SaleProductManageDetail(models.Model):
     USE_STATUS = (
         (NORMAL, u'使用'),
         (DELETE, u'作废')
+    )
+    DESIGN_TAKE_STATUS = (
+        (TAKEOVER, u'接管'),
+        (NOTTAKEOVER, u'未接管')
     )
     schedule_manage = BigIntegerForeignKey(SaleProductManage, related_name='manage_schedule', verbose_name=u'排期管理')
     sale_product_id = models.BigIntegerField(default=0, verbose_name=u"选品ID")
@@ -304,8 +310,11 @@ class SaleProductManageDetail(models.Model):
     product_link = models.CharField(max_length=512, blank=True, verbose_name=u'商品外部链接')
     material_status = models.CharField(max_length=64, blank=True, default=WORKING, choices=MATERIAL_STATUS,
                                        verbose_name=u"资料状态")
+    design_take_over = models.CharField(max_length=32, blank=True, default=NOTTAKEOVER, choices=DESIGN_TAKE_STATUS,
+                                        verbose_name=u"平面资料接管状态")
     today_use_status = models.CharField(max_length=64, db_index=True, default=NORMAL, choices=USE_STATUS,
                                         verbose_name=u"使用状态")
+    design_person = models.CharField(max_length=32, blank=True, verbose_name=u'设计负责人')
     created = models.DateTimeField(auto_now_add=True, verbose_name=u'创建日期')
     modified = models.DateTimeField(auto_now=True, verbose_name=u'修改日期')
 
